apps/vps/wstunnel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wstunnel
  namespace: wstunnel
spec:
  selector:
    app: wstunnel
  ports:
    - name: ws
      port: 8080
      targetPort: ws
